#16796 Refactoring